--- a/css/header_khs.css
+++ b/css/header_khs.css
@@ -25,10 +25,11 @@ nav:after {
 nav .logo {
     float: left;
     color: #2b6af2;
-    font-size: 27px;
+    font-size: 24px;
     font-weight: 600;
     line-height: 70px;
-    padding-left: 60px;
+    padding-left: 2%;
+    vertical-align: middle;
 
 }
 
@@ -37,7 +38,7 @@ nav .logo {
     max-height: 70px;
     max-width: 120px;
     padding-top: 5px;
-    margin-left: 41%;
+    margin-left: 43%;
     padding-bottom: 5px;
 
 
@@ -46,7 +47,7 @@ nav .logo {
 nav ul {
     float: right;
     list-style: none;
-    margin-right: 40px;
+    margin-right: 10px;
     position: relative;
 }
 
@@ -54,7 +55,7 @@ nav ul li {
     float: left;
     display: inline-block;
     background: #f6f6f6;
-    margin: 0 5px;
+    margin:0 2px;
 }
 
 nav ul li:hover > ul {
@@ -67,21 +68,27 @@ nav ul li a {
     color: black;
     text-decoration: none;
     line-height: 70px;
-    font-size: 18px;
-    padding: 8px 15px;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 8px 10px;
 }
-
-nav ul li a:hover {
+nav ul ul li a{
+    font-size:15px;
+    padding:8px 0px;
+    padding-left: 10px;
+}
+nav ul li a:hover,nav ul li .navbar_active {
     color: #2b6af2;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #2b6af2,
-        0 0 5px #2b6af2;
+    
+   
+    
 }
 
 nav ul ul {
     position: absolute;
     top: 90px;
     border-top: 3px solid #2b6af2;
+    
     opacity: 0;
     visibility: hidden;
     transition: top .3s;
@@ -89,12 +96,13 @@ nav ul ul {
 
 nav ul ul ul {
     border-top: none;
+    
 }
 
 nav ul ul li {
     position: relative;
     margin: 0;
-    width: 160px;
+    width: 130px;
     float: none;
     display: list-item;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
@@ -113,7 +121,7 @@ nav ul ul li a:hover {
 nav ul ul ul li {
     position: relative;
     top: -70px;
-    left: 160px;
+    left: 130px;
 
 }
 
@@ -130,9 +138,13 @@ input {
     display: none;
 }
 
+@media all and (max-width:1200px) {
+    nav .logo_img{
+        display:none;
+    }
+}
 
-
-@media all and (max-width:968px) {
+@media all and (max-width:720px) {
 
 
     .icon {
